japicmp compiles with openjdk-11.0.2